# patcher

./: .gitignore  CMakeLists.txt  README.md
src/: dllmain.cpp  pch.hpp
src/Module/: Module.hpp  ModuleRegistry.hpp
src/Module/Impl/: CustomBlockShape.hpp  Fullbright.hpp  GuiScale.hpp  ItemUseDelay.hpp  JumpDelay.hpp  MinimalViewBobbing.hpp  NoHurtCam.hpp  TeleportRotation.hpp  ThirdPersonNametag.hpp
src/Util/: Config.hpp  Console.hpp  Detour.hpp  Mem.hpp  PE.hpp  SigScan.hpp
